<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="33dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="51dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/Crear"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/txtDni"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/txtDni"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtDni"
        android:layout_width="246dp"
        android:layout_height="0dp"
        android:layout_marginBottom="39dp"
        android:ems="10"
        android:hint="@string/DNI"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="246dp"
        android:layout_height="0dp"
        android:layout_marginBottom="37dp"
        android:ems="10"
        android:hint="@string/Nombre"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtClave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDni" />

    <EditText
        android:id="@+id/txtClave"
        android:layout_width="246dp"
        android:layout_height="0dp"
        android:layout_marginBottom="47dp"
        android:ems="10"
        android:hint="@string/Clave"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/txtClave2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtClave2"
        android:layout_width="246dp"
        android:layout_height="0dp"
        android:layout_marginBottom="74dp"
        android:ems="10"
        android:hint="@string/Clave2"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/btnCrear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtClave" />

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="241dp"
        android:layout_height="0dp"
        android:layout_marginBottom="137dp"
        android:text="@string/btnRegistrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtClave2" />
</androidx.constraintlayout.widget.ConstraintLayout>